# clarence

./: Cargo.toml  Makefile  Makefile.conf  README  README.md  _rmgr_manualedit  bib2key  bib2type  clarence  doi2bib  notes_template.md  pdf2doi  querycr  rmgr_add  rmgr_addentry  rmgr_addfile  rmgr_addmultiple  rmgr_cleanbib  rmgr_doi2bibtex  rmgr_editnote  rmgr_extractbibtex  rmgr_extractkey  rmgr_extracttype  rmgr_formatbib  rmgr_formatkey  rmgr_getval  rmgr_inferdoi  rmgr_key2bib  rmgr_key2ext  rmgr_lookupkey  rmgr_lookupkeyprefix  rmgr_querycrossref  rmgr_readkey  rmgr_searchkey  rmgr_setupenv  rmgr_updlist  rmgr_updtags  rmgr_updval  sample_config  summary_template.md
autocompletions/: zsh
editor/: markdown.vim
rmgr/: _CatDefaultsForArticle  _CatDefaultsForBook  _CatDefaultsForBook-chapter  _CatDefaultsForIncollection  _CatDefaultsForInproceedings  _CatDefaultsForMastersthesis  _CatDefaultsForMisc  _CatDefaultsForMonograph  _CatDefaultsForPhdthesis  _CatDefaultsForTechreport  _CreateManualEntry  _CreateNewEntry  _GetTypesList  _deflateYaml  _extractFields  _extractFullRecords  _extractKeyRegex  _inflateYaml  _pickFields  _previewSummaryFile  _updateRecord  addentry  addfile  editnote  findsummary  genkey  key2record  readpdf  readsummary  searchdb  searchfzf  searchkey  update_reading_folders  writesummary
src/: error.rs  main.rs  scraper.rs
utils/: doi2bibjson  doi2bibtex  getbjval  getyamlval  json2yaml  pdf2doi  querycr
