[package]
name = "clarence"
version = "0.3.0-wip"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive", "env"] }
derive_more = { version = "2.0.1", features = ["from"] }
deunicode = "1.6.0"
inquire = { version = "0.7.5", features = ["editor"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
toml = "0.8.20"
